v0.2.9:2911:0941
- Добавлено управление инвентарём игрока (экипировка, дроп, раскладка в быстрые слоты);
- Теперь зелья имеют ограниченное время действия;
- Передвижение игрока вынесено в отдельный поток;
- Враги больше не наступают друг на друга;
- Добавлена анимация смерти для персонажа;
- Разные балансные изменения к характеристикам объектов;
- Для лучшей совместимости, байт-код был понижен до версии JDK 11;
- Исправлены следующие баги:
-- При распитии зелий после загрузки сохранения игра не ломается;
-- Броня больше не надевается в слот оружия;
-- Новые предметы не добавляются после всех занятых быстрых слотов;
-- Игра не ломается после перехода на третий этаж (исправлена ошибка в функции вычисления случайных значений);
-- Таймер зелий не "ломает" окна;